--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <button class="search_button">검색</button>
     </div>
     <div class="content"></div>
-    <button class="top_button hide"><i class="fa-solid fa-arrow-up"></i></button>
+    <button class="top_button hide"><i class="fa-solid fa-arrow-up up_button"></i></button>
     <script src="script.js"></script>
   </body>
 </html>
